# wat

./: .gitignore  Cargo.toml  README.md  install.sh  test_basic.sh
examples/: basic_usage.rs
src/: agent.rs  component.rs  config.rs  hotkey.rs  layout.rs  lib.rs  llm.rs  main.rs  render.rs  renderer.rs  terminal.rs  tools.rs
src/components/: error.rs  mod.rs  prompt.rs  response.rs  separator.rs  spinner.rs  thinking.rs  tool_call.rs  tool_result.rs  user_input.rs
