[package]
name = "wat"
version = "0.1.0"
edition = "2024"
description = "Well Assisted Terminal - Inline terminal assistant"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/wat"
readme = "README.md"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.26"
crossterm = "0.27"
nix = { version = "0.27", features = ["term"] }
libc = "0.2"
whoami = "1.0"
shell-words = "1.0"
which = "4.0"
dirs = "5.0"
config = "0.14"
shellexpand = "3.0"
colored = "2.0"
regex = "1.0"
once_cell = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3